[metadata]
name = leverage
version = attr: leverage.__version__
url = https://github.com/binbashar
project_urls = 
    Source Code = https://github.com/binbashar/leverage
license = MIT License
license_files = LICENSE.txt
author = BinBash Inc
author_email = leverage@binbash.com.ar
description = Binbash Leverage Command-Line tool.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = BINBASH, LEVERAGE
classifiers = 
    Development Status :: 3 - Alpha,
    Intended Audience :: Developers,
    Topic :: Software Development :: Build Tools,
    License :: OSI Approved :: MIT License,
    Programming Language :: Python :: 3,
    Programming Language :: Python :: 3.6,
    Programming Language :: Python :: 3.7,
    Programming Language :: Python :: 3.8

[options]
packages = leverage
python_requires = >= 3.6
install_requires = 
    yaenv == 1.2.2
    click == 8.0.0
    jinja2 == 3.0.0
    ruamel.yaml == 0.17.4

[options.entry_points]
console_scripts =
    leverage = leverage:leverage
