[metadata]
name = leverage
version = attr: leverage.__version__
url = https://github.com/binbashar
project_urls = 
    Source Code = https://github.com/binbashar/leverage
license = MIT License
license_files = LICENSE.txt
author = BinBash Inc
author_email = leverage@binbash.com.ar
description = Binbash Leverage Command-Line tool.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = BINBASH, LEVERAGE
classifiers = 
    Development Status :: 3 - Alpha,
    Intended Audience :: Developers,
    Topic :: Software Development :: Build Tools,
    License :: OSI Approved :: MIT License,
    Programming Language :: Python :: 3,
    Programming Language :: Python :: 3.6,
    Programming Language :: Python :: 3.7,
    Programming Language :: Python :: 3.8

[options]
packages = leverage
python_requires = >= 3.6
install_requires = 
    yaenv == 1.2.2
    ruamel.yaml == 0.17.9
    click == 8.0.1
    rich == 10.3.0
    jinja2 == 3.0.1
    docker == 5.0.0
    dockerpty == 0.4.1
include_package_data = True

[options.entry_points]
console_scripts =
    leverage = leverage:leverage

[tool:pytest]
addopts = --cov=leverage --cov-report html:coverage

[coverage:run]
branch = True

[coverage:report]
show_missing = True
skip_covered = True
